2015-10-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/cdefs.h: Synchronize with latest FreeBSD
	version.

2015-10-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>

2015-10-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/cdefs.h: Add style changes of latest FreeBSD
	version.

2015-08-29  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/unistd.h (_SC_LEVEL*): Add cache-related variables as
	on Linux.

2015-08-27  Markus Eisenmann  <meisenmann.lba@fh-salzburg.ac.at>

	* libc/machine/arm/strlen-armv7.S: Fix prepocessor check to avoid
	double definition of strlen.

2015-08-27  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* libc/include/sys/_intsup.h: Defined new __INTxx, __FASTxx and
	__LEASTxx macro's to hold information regarding the respective types
	print and scan formats.
	* libc/include/inttypes.h: Defined LEAST and FAST specific PRI and SCN
	macro's as these are not always the same as the INT variants. Used the
	new __INTxx, __FASTxx and __LEASTxx macro's in their corresponding PRI
	and SCN macros.

2015-08-07  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* libc/sys/or1k/mlock.c: Fix exception enable saving

2015-08-03  Shoichi Sakon  <s-sakon@ap.jp.nec.com>

	* libc/stdio/vfwscanf.c (__SVFWSCANF_R): Convert wrong usage of va_arg
	to GET_ARG in %lc, %ls nad %l[] cases.  Fix unterminated string in %l[]
	case.

2015-07-30  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/include/sys/lock.h (__LOCK_INIT_RECURSIVE): Use
	proper type.

2015-07-30  Wilco Dijkstra  <wdijkstr@arm.com>

	* libc/machine/aarch64/memset.S (memset): Rewrite.

2015-07-28  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	libc/sys/rtems/machine/_types.h: Move to ...
	libc/sys/rtems/include/machine/_types.h: ... here.
	libc/sys/rtems/machine/limits.h: Move to ...
	libc/sys/rtems/include/machine/limits.h: ... here.
	libc/sys/rtems/machine/param.h: Move to ...